# karta2d

./: .gitignore  Karta2D.sln  README.md
Karta2D/: Application.cpp  Application.h  CMakeLists.txt  Collision2D.h  Graphics.cpp  Graphics.h  Karta2D.vcxproj  Karta2D.vcxproj.filters  Timer.h  main.cpp
Karta2D/SimpleECS/: Components.h  EntityManager.h  SimpleECS.h
Karta2D/SimpleECS/Components/: Box.h  Circle.h  Rigidbody2D.h  Square.h  Transform2D.h
Karta2D/Tools/: Vector2D.h
Karta2D/include/: Application.h  BoxCollider2D.h  Circle.h  CircleCollider2D.h  Collision2D.h  Graphics.h  Rigidbody2D.h  SimpleECS.h  Timer.h  Vector2D.h
Karta2D/include/Components/: Box.h  BoxCollider2D.h  Circle.h  CircleCollider2D.h  Components.h  Rigidbody2D.h  Transform2D.h
Karta2D/src/: Application.cpp  Collision2D.cpp  Graphics.cpp  Timer.cpp  main.cpp
